--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "vue-intersect": "^1.1.6",
+    "vue-window-size": "^0.6.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "sass": "^1.32.5",
+    "sass-loader": "^10.1.1"
+  }
 }
