--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
-    "vue-intersect": "^1.1.6",
-    "vue-window-size": "^0.6.2"
+    "vue-intersect": "^1.1.6"
   },
   "devDependencies": {
     "sass": "^1.32.5",
