--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
-    "vue-intersect": "^1.1.6"
+    "vue-intersect": "^1.1.6",
+    "vue-slick-carousel": "^1.0.6"
   },
   "devDependencies": {
     "sass": "^1.32.5",
