--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "heroku": "^7.47.12",
     "nuxt": "^2.14.6",
     "vue-intersect": "^1.1.6",
     "vue-slick-carousel": "^1.0.6"
