--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "nuxt": "^2.14.6",
     "swiper": "^6.4.11",
     "vue-intersect": "^1.1.6",
-    "vue-slick-carousel": "^1.0.6",
-    "vue-awesome-swiper": "^3.1.3"
+    "vue-slick-carousel": "^1.0.6"
   },
   "devDependencies": {
     "sass": "^1.32.5",
