--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ARH_270EE }}'
-          projectId: arh-270ee
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DWYNN_F29D9 }}'
+          projectId: dwynn-f29d9
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
