--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-slick-carousel": "^1.0.6"
   },
   "devDependencies": {
+    "@nuxt/types": "^2.14.12",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1"
   }
