--- a/package.json
+++ b/package.json
@@ -10,16 +10,24 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "heroku": "^7.47.12",
     "nuxt": "^2.14.6",
-    "vue-intersect": "^1.1.6",
-    "vue-slick-carousel": "^1.0.6",
-    "vue-awesome-swiper": "^3.1.3"
+    "vue-awesome-swiper": "^4.1.1",
+    "vue-intersect": "^1.1.6"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.12",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1"
+  },
+  "prettier": {
+    "printWidth": 80,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "jsxBracketSameLine": true,
+    "arrowParens": "avoid",
+    "vueIndentScriptAndStyle": true
   }
 }
