--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,13 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "headers": [{
+      "source": "/dist/**",
+      "headers": [{
+        "key": "Cache-Control",
+        "value": "public, max-age=0"
+      }]
+    }]
   }
 }
