--- a/firebase.json
+++ b/firebase.json
@@ -7,7 +7,7 @@
       "**/node_modules/**"
     ],
     "headers": [{
-      "source": "/dist/**",
+      "source": "/dist/**/.*",
       "headers": [{
         "key": "Cache-Control",
         "value": "public, max-age=0"
