--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "heroku": "^7.47.12",
     "nuxt": "^2.14.6",
+    "swiper": "^6.5.0",
     "vue-awesome-swiper": "^4.1.1",
     "vue-intersect": "^1.1.6"
   },
